--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "source-map-loader": "^0.2.4"
   },
   "devDependencies": {
