--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-hot-loader": "^4.12.18",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.5",
