--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hot-loader": "^4.12.18",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
+    "react-tooltip": "^3.11.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
